<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alzheimer Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add">Alzheimer Tracker</string>
    <string name="title_activity_display">Alzheimer Tracker</string>
    <string name="title_activity_gps">Alzheimer Tracker</string>
    <string name="title_activity_settings">Alzheimer Tracker</string>
    
    
    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">25sp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <style name="ListRow">
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">25sp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <style name="ListRowText">
        <item name="android:layout_width">0dp</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_weight">2</item>
        <item name="android:textColor">#FFFFFF</item>
        <item name="android:textSize">20sp</item>
        <item name="android:textStyle">bold</item>
    </style>
	
	<string name="button_save">Save</string>
	<string name="button_update">Update</string>
	<string name="button_add">Add</string>
	
    <string name="gps_t1">Provider: </string>
    <string name="gps_t2">Longitude: </string>
    <string name="gps_t3">Latitude: </string>
    <string name="gps_t4">History: </string>
    
    <string name="add_t1">Firstname:</string>
    <string name="add_t2">Lastname:</string>
	<string name="add_t3">Phone:</string>
	
	<string name="main_t1">Turn on tracking</string>
	<string name="main_t2">Contacts</string>
	<string name="main_t3">Settings</string>
	<string name="main_t4">Logo</string>
	
	<string name="settings_t1">Range of area in meters:</string>
    <string name="settings_t2">Center of area:</string>
    <string name="settings_t3">Change language</string>
    
    <string name="display_t1">Contacts</string>
        
    <string name="gps_j1">Out of range, distance from center: </string>
    <string name="gps_j2">In range, distance from center: </string>
    
    <string name="main_j1">Turn on tracking</string>
    <string name="main_j2">Turn off tracking</string>
    
    <string name="settings_j1">Updated!</string>
    <string name="settings_j2">Please enter valid data!</string>
    
</resources>
