<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.soad.alzheimer_gps.SettingsActivity" >

    <TextView
        android:id="@+id/settings_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/settings_t1"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />
    
    <EditText
        android:id="@+id/settings_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/settings_textView1"
        android:layout_below="@+id/settings_textView1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:ems="10"
	    android:inputType="numberSigned" />
    
    <TextView
        android:id="@+id/settings_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/settings_textView2"
        android:layout_centerVertical="true"
        android:text="@string/settings_t2"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />
    
    <EditText
        android:id="@+id/settings_textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/settings_textView2"
        android:layout_below="@+id/settings_textView3"
        android:textSize="16sp"
        android:textStyle="bold"
        android:ems="10"
	    android:inputType="textAutoComplete" />

    <Button
        android:id="@+id/settings_button1"
        android:background="@drawable/button_red"
        android:layout_alignParentBottom="true"
        android:text="@string/button_update"
        style = "@style/ButtonText" />

</RelativeLayout>