<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="pl.soad.alzheimer_gps.AddActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/list_row_grey" >
        
        <TextView 
            android:id="@+id/frst_TextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_t1"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        
        <EditText
	        android:id="@+id/frst_editTxt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPersonName"
	        android:layout_weight="2" >
	
	        <requestFocus />
	    </EditText>
    </TableRow>
    
        <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tableRow1"
        android:background="@drawable/list_row_grey" >
        
        <TextView 
            android:id="@+id/last_TextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_t2"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        
        <EditText
	        android:id="@+id/last_editTxt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPersonName"
	        android:layout_weight="2" />
	

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
		android:layout_below="@+id/tableRow2"
		android:background="@drawable/list_row_grey" >
        
        <TextView 
            android:id="@+id/phone_TextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_t3"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        
        <EditText
	        android:id="@+id/phone_editTxt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="phone"
	        android:layout_weight="2" />

    </TableRow>
    
    <Button
        android:id="@+id/save_btn"
        android:background="@drawable/button_red"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:text="@string/button_save"
        style = "@style/ButtonText" />
    
</RelativeLayout>