<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="pl.soad.alzheimer_gps.GpsActivity" >


    <TableRow
        android:id="@+id/gps_tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/list_row_grey" >
        
        <TextView 
            android:id="@+id/gps_TextView1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gps_t1"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        
    </TableRow>
    
        <TableRow
        android:id="@+id/gps_tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gps_tableRow1"
        android:background="@drawable/list_row_grey" >
        
        <TextView 
            android:id="@+id/gps_TextView2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gps_t2"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/gps_tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
		android:layout_below="@+id/gps_tableRow2"
		android:background="@drawable/list_row_grey" >
        
        <TextView 
            android:id="@+id/gps_TextView3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gps_t3"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        
    </TableRow>
    <TableRow
        android:id="@+id/gps_tableRow4"
        android:layout_width="fill_parent"
<<<<<<< HEAD
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
		android:layout_below="@+id/gps_tableRow3"
		android:background="@drawable/list_row_grey" >
        
        <TextView 
            android:id="@+id/gps_TextView4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gps_t4"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        
    </TableRow>
    <TableRow
        android:id="@+id/gps_tableRow5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
		android:layout_below="@+id/gps_tableRow4"
		android:background="@drawable/list_row_grey" >
        
        <TextView 
            android:id="@+id/gps_TextView5"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gps_t2"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        
        <EditText
	        android:id="@+id/gps_editText1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_weight="2"
	        android:inputType="numberDecimal" >
	        <requestFocus />
	    </EditText>

    </TableRow>
    <TableRow
        android:id="@+id/gps_tableRow6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
=======
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
		android:layout_below="@+id/gps_tableRow3"
		android:background="@drawable/list_row_grey" >
        
        <TextView 
            android:id="@+id/gps_TextView4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gps_t4"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        
    </TableRow>
    <TableRow
        android:id="@+id/gps_tableRow5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
		android:layout_below="@+id/gps_tableRow4"
		android:background="@drawable/list_row_grey" >
        
        <TextView 
            android:id="@+id/gps_TextView5"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gps_t2"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        
        <EditText
	        android:id="@+id/gps_editText1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="phone"
	        android:layout_weight="2"
	        android:inputType="numberDecimal" >
	        <requestFocus />
	    </EditText>

    </TableRow>
    <TableRow
        android:id="@+id/gps_tableRow6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
>>>>>>> 36ae6a053960446e53f49e98ccadaeb204c5de5a
		android:layout_below="@+id/gps_tableRow5"
		android:background="@drawable/list_row_grey" >
        
        <TextView 
            android:id="@+id/gps_TextView6"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gps_t3"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        
        <EditText
	        android:id="@+id/gps_editText2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
<<<<<<< HEAD
=======
	        android:inputType="phone"
>>>>>>> 36ae6a053960446e53f49e98ccadaeb204c5de5a
	        android:layout_weight="2"
	        android:inputType="numberDecimal" />

    </TableRow>
<<<<<<< HEAD
    <TableRow
        android:id="@+id/gps_tableRow7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
		android:layout_below="@+id/gps_tableRow6"
		android:background="@drawable/list_row_grey" >
        
 		<Button
        android:id="@+id/gps_btn1"
        android:background="@drawable/button_red"
        android:layout_marginTop="10dp"
        android:text="turn on"
        style = "@style/ButtonText" />
        
        
    </TableRow>
=======
>>>>>>> 36ae6a053960446e53f49e98ccadaeb204c5de5a
    
</RelativeLayout>
